Finish up calculator - clean code from rubbish; - reorginize code flow; - write some comments;

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src='js/jquery/jquery_color_v2.1.2.js'></script>
     <script src='js/script.js'></script>
 
-    <link rel='stylesheet' href='css/bootstrap.css' type='text/css'>
+    <link rel='stylesheet' href='css/bootstrap.min.css' type='text/css'>
     <link rel='stylesheet' href='css/main.css' type='text/css'>
 
     <meta name='viewport' content='width=device-width initial-scale=1 shrink-to-fit=no'>
@@ -24,7 +24,7 @@
     <div class='col-sm-12'>
         <div id='cal'>
             <div id='screen'>
-                
+
             </div>
             <div id='btn-container'>
                 <button id='calc-ac' class='calc-btn btn-color'>AC</button>
@@ -54,9 +54,7 @@
     <div>
     </div>
     </div>
-
-    <button class='btn' id='btn-console'>Console</button>
-
+    <div id='math-scr' class='btn'></div>
 </body>
 
 </html>
